--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <canvas id="easel" width="300" height="300"></canvas>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
-    <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>
+    <!--<script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
+    <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>-->
     <script src="app.js" charset="utf-8"></script>
     <script src="update.js" charset="utf-8"></script>
   </body>
