added bower.json, added colors, added ability to erase and clear. Plan on adding fill tool, line tool, and more colors.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <div id="paint">
       <canvas id="easel" width="300" height="300"></canvas>
     </div>
+    <div class = "tools">
+      <div class = "black">Black</div>
+      <div class = "red">Red</div>
+      <div class = "green">Green</div>
+      <div class = "blue">Blue</div>
+      <div class = "eraser">Eraser</div>
+      <div class = "clear">Clear</div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!--<script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
     <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>-->
     <script src="app.js" charset="utf-8"></script>
-    <script src="update.js" charset="utf-8"></script>
   </body>
 </html>
