added resize buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <canvas id="easel" width="300" height="300"></canvas>
     </div>
     <div class = "tools">
+      <div class = "smallPen">Small Pen</div>
+      <div class = "medPen">Medium Pen</div>
+      <div class = "largePen">Large Pen</div>
       <div class = "black">Black</div>
       <div class = "red">Red</div>
       <div class = "green">Green</div>
@@ -17,6 +20,7 @@
       <div class = "eraser">Eraser</div>
       <div class = "clear">Clear</div>
     </div>
+    <p>double click and draw to create a filled shape</p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!--<script src="bower_components/jquery/dist/jquery.js" charset="utf-8"></script>
     <script src="bower_components/underscore/underscore.js" charset="utf-8"></script>-->
