--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class = "red">Red</div>
       <div class = "green">Green</div>
       <div class = "blue">Blue</div>
+      <div class = "yellow">Yellow</div>
       <div class = "eraser">Eraser</div>
       <div class = "clear">Clear</div>
     </div>
